<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_look_group_member"
        android:icon="@drawable/ic_create_new_folder_white_24dp"
        android:title="@string/action_look_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upload_current_page_member"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/action_upload_current_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download_current_page_member"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/action_download_current_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download_all_member"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/action_download_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_member"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_exit"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>