<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_manager_group_header"
        android:icon="@drawable/ic_create_new_folder_white_24dp"
        android:title="@string/action_manager_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upload_current_page_header"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/action_upload_current_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download_current_page_header"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/action_download_current_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_header"
        android:icon="@mipmap/ic_account_balance_wallet_white_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

</menu>