<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.stormphoenix.fishcollector.mvp.model.beans.WaterLayer" />

        <variable
            name="waterLayerBean"
            type="WaterLayer" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/sp_water_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_arrowColor="@color/spinner_arrow_color"
            app:ms_baseColor="@color/spinner_base_color"
            app:ms_enableErrorLabel="true"
            app:ms_enableFloatingLabel="true"
            app:ms_floatingLabelColor="@color/spinner_floating_label_color"
            app:ms_floatingLabelText="@string/collect_water_layer"
            app:ms_hint="@string/collect_water_layer"
            app:ms_multiline="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_water_depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/m_unit"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/tv_water_depth">

                <EditText
                    android:id="@+id/et_depth_water_layer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/depth"
                    android:singleLine="true"
                    android:text="@{String.valueOf(waterLayerBean.depth)}" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_water_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/temperature_unit"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/tv_water_temperature">

                <EditText
                    android:id="@+id/et_water_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/water_temperature"
                    android:singleLine="true"
                    android:text="@{String.valueOf(waterLayerBean.temperature)}" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_water_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/water_level"
                    android:singleLine="true"
                    android:text="@{String.valueOf(waterLayerBean.waterLevel)}" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_water_velocity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/velocity_unit"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/tv_water_velocity">

                <EditText
                    android:id="@+id/et_water_velocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/water_velocity"
                    android:singleLine="true"
                    android:text="@{String.valueOf(waterLayerBean.velocity)}" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>
