<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.stormphoenix.fishcollector.mvp.model.beans.CatchTools" />

        <variable
            name="catchToolsBean"
            type="CatchTools" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_net_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:singleLine="true"
                        android:text="@={catchToolsBean.name}" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_net_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/net_type"
                        android:singleLine="true"
                        android:text="@={catchToolsBean.netsModel}" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_net_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/net_area"
                        android:singleLine="true"
                        android:text="@{String.valueOf(catchToolsBean.netMouthArea)}" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_net_angle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/net_angle"
                        android:singleLine="true"
                        android:text="@{String.valueOf(catchToolsBean.netMouthDip)}" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_net_velocity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/net_velocity"
                        android:singleLine="true"
                        android:text="@{String.valueOf(catchToolsBean.netMouthVelocity)}" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_start_time_tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start_time"
                        android:inputType="datetime"
                        android:text="@={catchToolsBean.startTime}" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_end_time_tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/end_time"
                        android:inputType="datetime"
                        android:text="@={catchToolsBean.endTime}" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <GridLayout
                android:id="@+id/gl_pictures_wrapper_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:padding="3dp"></GridLayout>
        </LinearLayout>
    </ScrollView>
</layout>
